--- a/.tx/config
+++ b/.tx/config
@@ -36,3 +36,8 @@ source_lang = en
 file_filter = source/locale/<lang>/LC_MESSAGES/install/advanced-configuration.po
 source_file = build/locale/install/advanced-configuration.pot
 source_lang = en
+
+[glpi-install.timezones]
+file_filter = source/locale/<lang>/LC_MESSAGES/timezones.po
+source_file = build/locale/timezones.pot
+source_lang = en
